--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
-        <activity
-            android:name=".healthStatsActivity"
-            android:label="@string/title_activity_health_stats"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".DemoFormActivity" />
         <activity android:name=".HomeActivity"></activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
